# cmake_template_project

./: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
